--- a/project2/webapp/view/Dialog.fragment.xml
+++ b/project2/webapp/view/Dialog.fragment.xml
@@ -3,8 +3,8 @@
 	xmlns:c="sap.ui.core"
 >
     <SelectDialog
-        noDataText="No Products Found"
-        title="Select Product"
+        noDataText="계정 정보가 없습니다."
+        title="G/L 계정 목록"
         search="handleSearch"
         confirm="handleValueHelpClose"
         cancel="handleValueHelpClose"
