--- a/project2/webapp/view/Master.view.xml
+++ b/project2/webapp/view/Master.view.xml
@@ -32,16 +32,19 @@
                 <!-- <OverflowToolbar class="sapFDynamicPageAlignContent">
                     <OverflowToolbarButton icon="sap-icon://sort" text="Sort" type="Transparent" press=".onSort"/>
                 </OverflowToolbar> -->
-                <Input
-                    id="sakInput"
-                    type="Text"
-                    value="검색어를 선택하세요"
-                    showValueHelp="true"
-                    valueHelpOnly="true"
-                    valueHelpRequest="handleValueHelp"
-                    class="sapUiSmallMarginBottom"
-                    width="15rem"
-                    />
+                    <Input
+                        id="sakInput"
+                        type="Text"
+                        value="검색어를 선택하세요"
+                        showValueHelp="true"
+                        valueHelpOnly="true"
+                        valueHelpRequest="handleValueHelp"
+                        class="sapUiSmallMarginBottom"
+                        width="15rem"
+                        />    
+					<!-- <SearchField search=".onSearch" width="17.5rem"/> -->
+					<!-- <OverflowToolbarButton icon="sap-icon://add" text="Add" type="Transparent" press=".onAdd"/> -->
+					<!-- <OverflowToolbarButton icon="sap-icon://sort" text="Sort" type="Transparent" press=".onSort"/> -->
                 <Table 
                     id="idSakTable"
                     items="{/SakSet}"
@@ -49,14 +52,14 @@
 					width="auto"
                 >
                     <columns>
-                        <Column width="4em"><Text text="{i18n>labelBukrs}" textAlign="Center"/></Column>
+                        <Column width="6em" hAlign="Center"><Text text="{i18n>labelBukrs}" textAlign="Center"/></Column>
                         <Column width="20em"><Text text="{i18n>labelSaknr}" /></Column>
                     </columns>
                     <items>
                         <ColumnListItem type="Navigation" press=".onListItemPress">
 							<cells>
 								<ObjectIdentifier title="{Bukrs}" />
-                                <ObjectIdentifier title="{Saknr}" text="{Schlw}" />
+                                <ObjectIdentifier title="{Schlw}" />
 							</cells>
 						</ColumnListItem>
                     </items>
