--- a/stacked_bar/webapp/view/View1.view.xml
+++ b/stacked_bar/webapp/view/View1.view.xml
@@ -83,18 +83,23 @@
                                     <viz:VizFrame 
                                         id="idVizFrame" 
                                         uiConfig="{ 'applicationSet': 'fiori' }" 
-                                        vizType="stacked_column" 
+                                        vizType="100_stacked_bar" 
                                         vizProperties="{
                                             'plotArea': {
                                                 'dataLabel': {
-                                                    'type': 'percentage',
-                                                    'visible': true
+                                                    'visible': true,
+                                                    'type': 'percentage'
                                                 },
                                                 'mode': 'percentage'
                                             },
                                             'title': { 
                                                 'visible': true, 
                                                 'text': '감가상각 진행률'
+                                            },
+                                            'valueAxisFeed': {
+                                                'label': {
+                                                    'formatString': '0.0%'
+                                                }
                                             }
                                         }"
                                         >
@@ -107,12 +112,12 @@
 
                                                 <viz.data:measures>
                                                     <viz.data:MeasureDefinition name="잔여금액" value="{Remamt}" />
-                                                        <viz.data:MeasureDefinition name="감가상각비 (단위:원)" value="{Sumamt}" />
+                                                    <viz.data:MeasureDefinition name="감가상각비" value="{Sumamt}" />
                                                 </viz.data:measures>
                                             </viz.data:FlattenedDataset>
                                         </viz:dataset>
                                         <viz:feeds>
-                                                <viz.feeds:FeedItem id='valueAxisFeed' uid="valueAxis" type="Measure" values="잔여금액,감가상각비 (단위:원)" />
+                                                <viz.feeds:FeedItem id='valueAxisFeed' uid="valueAxis" type="Measure" values="잔여금액,감가상각비" />
                                                 <!-- <viz.feeds:FeedItem id='valueAxisFeed2' uid="valueAxis2" type="Measure" values="잔여금액" /> -->
                                                 <viz.feeds:FeedItem id='categoryAxisFeed' uid="categoryAxis" type="Dimension" values="고정자산번호,고정자산명" />
                                         </viz:feeds>
